--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 		 <nav class="navbar navbar-expand-lg navbar-dark">
 
-			  <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+			  <a class="navbar-brand" href="#"><img src="logo.png" alt=""></a>
 
 				 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 				   	 <span class="navbar-toggler-icon"></span>
@@ -84,7 +84,7 @@
 		</nav>	
 
 		<div class="header_img">
-			<img src="images/header-bg.png" class="img-fluid">
+			<img src="header-bg.png" class="img-fluid">
 		</div>
 	</div>
 
@@ -106,7 +106,7 @@
 
 				<div class="col-lg-6 col-md-6 col-10 offset-1 offset-lg-0 offset-md-0">
 					<div class="hero_img">
-						<img src="images/hero-img.svg" alt="">
+						<img src="hero-img.svg" alt="">
 					</div>
 					
 				</div>
@@ -124,7 +124,7 @@
 					<div class="row text-white text-center">
 						<div class="col-lg-6 col-md-10 col-10 offset-lg-0 offset-md-1 offset-1">
 							<div class="mobile_app img_box">
-							<img src="images/mobileapp.png" class="img-fluid">
+							<img src="mobileapp.png" class="img-fluid">
 							<h2>Mobile App</h2>
 							</div>
 						</div>
@@ -132,7 +132,7 @@
 
 						<div class="col-lg-6 col-md-10 col-10 offset-lg-0 offset-md-1 offset-1">
 							<div class="web_design img_box">
-							<img src="images/webdesign.png" class="img-fluid">
+							<img src="webdesign.png" class="img-fluid">
 							<h2>Web Design</h2>
 							</div>
 						</div>
@@ -143,7 +143,7 @@
 					<div class="row text-white text-center">
 						<div class="col-lg-6 col-md-10 col-10 offset-lg-0 offset-md-1 offset-1">
 							<div class="marketing img_box">
-							<img src="images/marketing.png" class="img-fluid">
+							<img src="marketing.png" class="img-fluid">
 							<h2>Marketing</h2>
 							</div>
 						</div>
@@ -151,7 +151,7 @@
 
 						<div class="col-lg-6 col-md-10 col-10 offset-lg-0 offset-md-1 offset-1">
 							<div class="branding img_box">
-							<img src="images/branding.png" class="img-fluid">
+							<img src="branding.png" class="img-fluid">
 							<h2>Branding</h2>
 							</div>
 						</div>
@@ -163,7 +163,7 @@
 			<div class="col-lg-6 col-md-6 col-10 offset-1 offset-lg-0 offset-md-0">
 				<div class="right_section text-white">
 					<!-- <div class="circle text-center img_box">
-						<img src="images/circle.svg" class="img-fluid">
+						<img src="circle.svg" class="img-fluid">
 					</div> -->
 					<div class="right_text container mt-4">
 						<h3>Our Best Services</h3>
@@ -235,7 +235,7 @@
 
 			<div class="col-lg-6 col-md-6 col-10 offset-1 offset-md-0 offset-lg-0">
 				<div class="right_img mt-5 text-center">
-					<img src="images/team-mockup.png" class="img-fluid text-center mt-4">
+					<img src="team-mockup.png" class="img-fluid text-center mt-4">
 				</div>
 			</div>
 		</div>
@@ -254,7 +254,7 @@
 		<div class="row text-center">
 			<div class="col-lg-4 col-md-4 col-10 offset-1 offset-lg-0 offset-md-0">
 				<div class="projects_img mt-3">
-					<img src="images/project-1.jpg" class="img-fluid">
+					<img src="project-1.jpg" class="img-fluid">
 					<div class="detail">
 						<h4>Creative</h4>
 						<h5>Web Devlopment</h5>
@@ -265,7 +265,7 @@
 
 			<div class="col-lg-4 col-md-4 col-10 offset-1 offset-lg-0 offset-md-0">
 				<div class="projects_img mt-3">
-					<img src="images/project-2.jpg" class="img-fluid">
+					<img src="project-2.jpg" class="img-fluid">
 					<div class="detail">
 						<h4>Creative</h4>
 						<h5>Web Design</h5>
@@ -276,7 +276,7 @@
 
 			<div class="col-lg-4 col-md-4 col-10 offset-1 offset-lg-0 offset-md-0">
 				<div class="projects_img mt-3">
-					<img src="images/project-3.jpg" class="img-fluid">
+					<img src="project-3.jpg" class="img-fluid">
 					<div class="detail">
 						<h4>Creative</h4>
 						<h5>Web Graphics</h5>
@@ -291,7 +291,7 @@
 		<div class="row text-center mt-4">
 			<div class="col-lg-4 col-md-4 col-10 offset-1 offset-lg-0 offset-md-0">
 				<div class="projects_img mt-3">
-					<img src="images/project-4.jpg" class="img-fluid">
+					<img src="project-4.jpg" class="img-fluid">
 					<div class="detail">
 						<h4>Creative</h4>
 						<h5>UI/UX Design</h5>
@@ -302,7 +302,7 @@
 
 			<div class="col-lg-4 col-md-4 col-10 offset-1 offset-lg-0 offset-md-0">
 				<div class="projects_img mt-3">
-					<img src="images/project-5.jpg" class="img-fluid">
+					<img src="project-5.jpg" class="img-fluid">
 					<div class="detail">
 						<h4>Creative</h4>
 						<h5>Photography</h5>
@@ -313,7 +313,7 @@
 
 			<div class="col-lg-4 col-md-4 col-10 offset-1 offset-lg-0 offset-md-0">
 				<div class="projects_img mt-3">
-					<img src="images/project-6.jpg" class="img-fluid">
+					<img src="project-6.jpg" class="img-fluid">
 					<div class="detail">
 						<h4>Creative</h4>
 						<h5>App Devlopement</h5>
@@ -337,7 +337,7 @@
 			<div class="row pt-2">
 				<div class="col-lg-3 col-md-6 col-10 offset-1 offset-lg-0 offset-md-0">
 					<div class="team_box text-center">
-						<img src="images/team1.png" class="img-fluid rounded-circle">
+						<img src="team1.png" class="img-fluid rounded-circle">
 						<h2>John Smith</h2>
 						<p>CEO & Founder</p><hr>
 						<div class="social_icon text-center">
@@ -352,7 +352,7 @@
 
 				<div class="col-lg-3 col-md-6 col-10 offset-1 offset-lg-0 offset-md-0">
 					<div class="team_box text-center">
-						<img src="images/team2.png" class="img-fluid rounded-circle">
+						<img src="team2.png" class="img-fluid rounded-circle">
 						<h2>Sophia</h2>
 						<p>Maneger</p><hr>
 							<div class="social_icon text-center">
@@ -367,7 +367,7 @@
 
 				<div class="col-lg-3 col-md-6 col-10 offset-1 offset-lg-0 offset-md-0">
 					<div class="team_box text-center">
-						<img src="images/team3.png" class="img-fluid rounded-circle">
+						<img src="team3.png" class="img-fluid rounded-circle">
 						<h2>John Michle</h2>
 						<p>Design Expert</p><hr>
 							<div class="social_icon text-center">
@@ -381,7 +381,7 @@
 
 				<div class="col-lg-3 col-md-6 col-10 offset-1 offset-lg-0 offset-md-0">
 					<div class="team_box text-center">
-						<img src="images/team4.png" class="img-fluid rounded-circle">
+						<img src="team4.png" class="img-fluid rounded-circle">
 						<h2>Robert Jhon</h2>
 						<p>Product Designer</p><hr>
 						<div class="social_icon text-center">
@@ -409,7 +409,7 @@
 					<div class="teambox review pt-4">
 						<i class="fa fa-quote-left"></i>
 						<div class="profile">
-							<img src="images/team1.png" class="img-fluid rounded-circle">
+							<img src="team1.png" class="img-fluid rounded-circle">
 							<h2>Jhon Smith</h2>
 						</div>
 						<p> aliquip ex ea commodo
@@ -424,7 +424,7 @@
 					<div class="teambox review pt-4">
 						<i class="fa fa-quote-left"></i>
 						<div class="profile">
-							<img src="images/team2.png" class="img-fluid rounded-circle">
+							<img src="team2.png" class="img-fluid rounded-circle">
 							<h2>Shopia Jhon</h2>
 						</div>
 						<p> aliquip ex ea commodo
@@ -440,7 +440,7 @@
 					<div class="teambox review pt-4">
 						<i class="fa fa-quote-left"></i>
 						<div class="profile">
-							<img src="images/team3.png" class="img-fluid rounded-circle">
+							<img src="team3.png" class="img-fluid rounded-circle">
 							<h2>Jhon Robert</h2>
 						</div>
 						<p> aliquip ex ea commodo
@@ -467,7 +467,7 @@
 		<div class="row">
 			<div class="col-lg-4 col-md-4 col-10 offset-1 offset-lg-0 offset-md-0">
 				<div class="blog mt-4">
-					 <img src="images/blog1.png" class="img-fluid">
+					 <img src="blog1.png" class="img-fluid">
 					 <h4>Powerful App For Tracking Daily Activities</h4><hr>
 					 <p>Labore et dolore magna aliqua. Ut enim ad minim veniam,
 					 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -481,7 +481,7 @@
 
 			<div class="col-lg-4 col-md-4 col-10 offset-1 offset-lg-0 offset-md-0">
 				<div class="blog mt-4">
-					 <img src="images/blog2.png" class="img-fluid">
+					 <img src="blog2.png" class="img-fluid">
 					 <h4>Powerful App For Tracking Daily Activities</h4><hr>
 					 <p>Labore et dolore magna aliqua. Ut enim ad minim veniam,
 					 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -495,7 +495,7 @@
 
 			<div class="col-lg-4 col-md-4 col-10 offset-1 offset-lg-0 offset-md-0">
 				<div class="blog mt-4">
-					 <img src="images/blog3.png" class="img-fluid">
+					 <img src="blog3.png" class="img-fluid">
 					 <h4>Powerful App For Tracking Daily Activities</h4><hr>
 					 <p>Labore et dolore magna aliqua. Ut enim ad minim veniam,
 					 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -530,7 +530,7 @@
 	<section class="footer_section" id="about">
 
 		<div class="footer_img">
-			<img src="images/footer-agency.png" class="img-fluid">
+			<img src="footer-agency.png" class="img-fluid">
 		</div>
 
 		<div class="container-fluid text-white footer_txt">
